sass/_unittest.scss
/* ... */
input[type="checkbox"]:checked,
input[type="radio"]:checked
{
  border-color: $primary-color !important;
}

.wpcf7-form-control {
  display: flex;
  justify-content: space-between;
  gap: 10px;
  flex-wrap: wrap;

  .wpcf7-list-item {
    margin: 0;
    label {
      display: flex;
      align-content: center;
      margin: 0;
      gap: 10px;

      .wpcf7-list-item-label {
        font-size: 16px;
        font-weight: 400;
      }
    }
  }
}
.logged-in {
  .comment-respond {
    textarea {
      margin-bottom: 12px;
    }
  }
}
// Zoom Instagram Widget
.zoom-instagram-widget {
 p {
   color: $white;

   a {
     color: $orange-color;
   }
 }
  ul {
    list-style: none;
    li {
      color: $white;
    }
  }
}
  // When Admin Logged In
body {
  &.admin-bar {
    .header-menu-area.sticky_menu {
      top: 30px;

      @include rmaxwd(600) {
        top: 0;
      }
    }
  }
}

.page-template-default {
  &.page-id-146 {
    .page-content {
      p {
        &:last-child {
          margin-bottom: 10px;
        }
      }
    }
  }

  &.page-id-1133 {
    .page-content {
      .comment-respond {
        margin-top: 78px;
        display: inline-block;
        width: 100%;
      }
    }
  }

}
.post-template-default {
  &.postid-163 {
    .blog-details-wrapper .single-post-item .post-content {
      margin-bottom: 34px;
    }
  }
  &.postid-150 {
    .blog-details-wrapper .single-post-item .post-content {
      margin-bottom: 34px;

      .wp-block-group.is-layout-constrained {
        &:last-child {
          border: 1px solid #000;
        }
      }
    }
  }
  &.postid-51 {
    .blog-details-wrapper {
      .single-post-item .post-content {
        margin-bottom: 25px;
        p {
          &:last-child {
            margin-bottom: 0;
          }
        }
      }
    }
  }
  &.postid-1163,
  &.postid-568 {
    .blog-details-wrapper {
      .single-post-item .post-content {
        .wp-caption {
          margin-top: 20px;
        }
      }
    }
  }
}

